--- a/package.json
+++ b/package.json
@@ -11,11 +11,19 @@
     "@types/node": "^16.11.64",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@types/react-redux": "^7.1.24",
+    "@types/redux-logger": "^3.0.9",
+    "axios": "^1.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-h5-audio-player": "^3.8.6",
+    "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.2.1",
+    "reselect": "^4.1.6",
+    "typed-redux-saga": "^1.5.0",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
